--- a/后端源码/后端部署.md
+++ b/后端源码/后端部署.md
@@ -8,10 +8,12 @@ Python 3+
 
 3D姿态检测依赖：
 
-- CUDA
+- CUDA version 10.2
 
 - python libraries: pytorch + mmpose + mmdetection
 
+  参考：[Installation — MMPose 1.0.0 documentation](https://mmpose.readthedocs.io/en/latest/installation.html)
+  
   ![image-20230428120350326](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/image-20230428120350326.png)
 
 ----
