--- a/前端源码/前端部署.md
+++ b/前端源码/前端部署.md
@@ -49,9 +49,15 @@
 
 ⑥观察控制台没有编译错误，则导入成功
 
+⑦project->Assets->Scenes下双击“0.unity”，即可看到项目预设场景
+
+![image-20230428151654394](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/image-20230428151654394.png)
+
 
 
 ### Unity配置测试
+
+#### 本机测试
 
 基于上述步骤，在两个人物控件的/rig/offset的右侧信息栏中分别引入out0.json和out1.json，**并勾选“Use Local Json”选项**
 
@@ -60,13 +66,17 @@
 ![11](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/11.png)
 配置成功后，点击上方三角按钮，观察任务动作变化，若画面中人物动作正常变化，则项目搭建成功，可以进入下一步“将Unity项目部署到Hololens2”。
 
+#### 联机测试
+
+若上述测试成功，请继续向下进行。
+
 
 
 ### 生成与运行
 
 *以下操作的目的是将配置好的项目编译并导入到Hololens2眼镜中
 
-①导入混合现实工具包MRTK，参考教程 [[MRTK导入-参考教程](https://learn.microsoft.com/zh-cn/training/modules/learn-mrtk-tutorials/1-5-exercise-configure-resources?ns-enrollment-type=learningpath&ns-enrollment-id=learn.azure.beginner-hololens-2-tutorials&tabs=openxr)]，完成`导入 MRTK Unity 基础包`小结。
+①导入混合现实工具包MRTK，参考教程 [[MRTK导入-参考教程](https://learn.microsoft.com/zh-cn/training/modules/learn-mrtk-tutorials/1-5-exercise-configure-resources?ns-enrollment-type=learningpath&ns-enrollment-id=learn.azure.beginner-hololens-2-tutorials&tabs=openxr)]，完成`导入 MRTK Unity 基础包`小节。
 
 ②在“文件”->“生成设置”（File->Build Settings）中，左侧选择”Universal Windows Platform“，点击”切换平台“。然后依次选择以下配置：
 
@@ -74,7 +84,7 @@
 
 ③点击”玩家设置“（File->Project Settings->Player）
 
-3.1 更改包名，也可以使用默认报名但不建议，此步骤是为了防止相同包名的应用相互覆盖
+3.1 更改包名，也可以使用默认包名但不建议，此步骤是为了防止相同包名的应用相互覆盖
 
 ![image-20230427153522220](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/image-20230427153522220.png)
 
