--- a/后端源码/后端部署.md
+++ b/后端源码/后端部署.md
@@ -46,7 +46,11 @@ Python 3+
 
 ![image-20230428125247270](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/image-20230428125247270.png)
 
-设置完毕后，先运行后端`send_test.py`文件，然后在前端Unity中点击运行。观察到小人正常运动则说明通信成功。如果后端代码报错请检查后端网路传输部分环境，如果前端报错请检查眼镜与后端设备是否处于同一内网环境下，IP和端口填写是否正确。
+针对两个人物unitychan/rig/offset右侧信息栏，取消勾选“Use Local Json”选项。
+
+![image-20230428152127607](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/image-20230428152127607.png)
+
+设置完毕后，先运行后端`send_test.py`文件，然后在前端Unity中点击运行。观察到小人正常运动则说明通信成功。如果后端代码报错请检查后端网路传输部分环境，如果前端控制台报网络错误请检查眼镜与后端设备是否处于同一内网环境下，IP和端口填写是否正确。
 
 
 
