--- a/后端源码/后端部署.md
+++ b/后端源码/后端部署.md
@@ -2,9 +2,7 @@
 
 ### Dependencies
 
-Python 3+
-
-------
+- Python 3+
 
 3D姿态检测依赖：
 
@@ -16,19 +14,15 @@ Python 3+
   
   ![image-20230428120350326](https://sinkers-pic.oss-cn-beijing.aliyuncs.com/img/image-20230428120350326.png)
 
-----
-
 动作预测模型TrajectoryCNN依赖：
 
 - python libraries: tensorflow (>=1.0, <2.0) + opencv + numpy
-
-----
 
 网络传输部分依赖：
 
 - python libraries: fastapi + uvicorn[standard] + python-multipart
 
-
+----
 
 ### Get started
 
@@ -36,7 +30,7 @@ Python 3+
 
 运行后端程序`vis_demo.py`，如果运行成功则说明模型配置成功。
 
-
+----
 
 #### 前后端连接测试
 
@@ -52,11 +46,11 @@ Python 3+
 
 设置完毕后，先运行后端`send_test.py`文件，然后在前端Unity中点击运行。观察到小人正常运动则说明通信成功。如果后端代码报错请检查后端网路传输部分环境，如果前端控制台报网络错误请检查眼镜与后端设备是否处于同一内网环境下，IP和端口填写是否正确。
 
-
+----
 
 #### 部署后运行
 
-在Hololens2程序部署成功之后进行。
+在Hololens2程序部署成功之后进行。有单进程方案与多进程方案，单进程方案有已知的性能问题。
 
 ##### 多进程运行
 
