--- a/前端源码/前端部署.md
+++ b/前端源码/前端部署.md
@@ -11,15 +11,15 @@
 
 ## 安装工具
 
-1. **Windows10 或 Windows11操作系统**
+1. Windows10 或 Windows11操作系统
 
-2. **一台Hololens2头戴显示设备**
+2. 一台Hololens2头戴显示设备
 
-3. **WIN SDK（最新版）**
+3. WIN SDK（最新版）
 
-4. **UnityHub & Unity 2020.3.45  [**[下载地址](https://unity.cn/releases/full/2020)**]**
+4. UnityHub & Unity 2020.3.45  [[下载地址](https://unity.cn/releases/full/2020)]
 
-5. **Visual Studio 2022 [**[下载地址](https://visualstudio.microsoft.com/zh-hans/)**]**
+5. Visual Studio 2022 [[下载地址](https://visualstudio.microsoft.com/zh-hans/)]
 
    **必备插件：**
 
